testcases/malgo/error/QualifiedImport.mlg
module QualifiedImport = {
  module {..} = import Builtin;
  module P = import Prelude;
  
  def main = {
    putStrLn "Hello, world!"
  };
}